InputTestëª명칭변경/LottoTest테스트코드